# V4PCS_Project

./: .gitignore  CMakeLists.txt  README.md  V4PCS_Project.cpp  V4PCS_Project.h
include/Core/: Types.h
include/Geometry/: PatchMerger.cpp  PatchMerger.h  PlaneExtractor.h  PlanetExtractor.cpp  VoxelGrid.cpp  VoxelGrid.h
include/IO/: FileManager.cpp  FileManager.h
libs/eigen/: CMakeLists.txt
libs/eigen/bench/spbench/: CMakeLists.txt
libs/eigen/blas/: CMakeLists.txt
libs/eigen/blas/testing/: CMakeLists.txt
libs/eigen/doc/: AsciiQuickReference.txt  CMakeLists.txt
libs/eigen/doc/examples/: CMakeLists.txt
libs/eigen/doc/snippets/: CMakeLists.txt
libs/eigen/doc/special_examples/: CMakeLists.txt
libs/eigen/failtest/: CMakeLists.txt
libs/eigen/lapack/: CMakeLists.txt
libs/eigen/test/: CMakeLists.txt
libs/eigen/unsupported/: CMakeLists.txt
libs/eigen/unsupported/Eigen/: CMakeLists.txt
libs/eigen/unsupported/doc/examples/: CMakeLists.txt
libs/eigen/unsupported/doc/examples/SYCL/: CMakeLists.txt
libs/eigen/unsupported/test/: CMakeLists.txt
src/: fichier_manager.cpp  fichier_manager.h  grille_voxel.cpp  grille_voxel.h  main.cpp  patch_builder.cpp  patch_builder.h  patch_pair_generator.cpp  patch_pair_generator.h  v4pcs_algo.cpp  v4pcs_algo.h  voxel_planaire_extraction.cpp  voxel_planaire_extraction.h
